--- a/src/assets/styles/Contact.scss
+++ b/src/assets/styles/Contact.scss
@@ -34,6 +34,10 @@
     color: rgba(255, 255, 255, 0.8);
     margin-bottom: 20px;
   }
+
+  .light-mode & .MuiTypography-body1 {
+    color: rgba(13, 17, 22, 0.8);
+  }
 }
 
 .social-media-container {
