--- a/src/assets/styles/Education.scss
+++ b/src/assets/styles/Education.scss
@@ -109,6 +109,10 @@
     position: relative;
     z-index: 1;
   }
+
+  .light-mode .education-item h2 {
+    color: #0d1116;
+  }
   
   .education-item h3 {
     font-size: 1.1rem;
@@ -118,6 +122,10 @@
     z-index: 1;
     font-weight: 500;
   }
+
+  .light-mode .education-item h3 {
+    color: rgba(13, 17, 22, 0.8);
+  }
   
   .education-item p {
     font-size: 1rem;
@@ -125,6 +133,10 @@
     line-height: 1.7;
     position: relative;
     z-index: 1;
+  }
+
+  .light-mode .education-item p {
+    color: rgba(13, 17, 22, 0.7);
   }
   
   @media screen and (max-width: 768px) {
